--- a/src/styles/sass/layout/Navbar.module.scss
+++ b/src/styles/sass/layout/Navbar.module.scss
@@ -23,6 +23,8 @@
     display: none;
     @media screen and (max-width: 760px) {
       display: block;
+      margin-left: 1rem;
+      font-size: 1.2rem;
     }
   }
   & ul {
@@ -30,7 +32,7 @@
     list-style: none;
     text-decoration: none;
     display: flex;
-    gap: 1rem;
+    gap: 1.5rem;
     & .closeBtnMenu {
       display: none;
     }
@@ -52,6 +54,7 @@
       &.active {
         transform: translateX(0);
         transition: all 0.2s linear;
+        padding: 0 1rem;
       }
       & .closeBtnMenu {
         display: block;
