--- a/src/styles/sass/pages/howToUse.module.scss
+++ b/src/styles/sass/pages/howToUse.module.scss
@@ -1,9 +1,14 @@
 @import "../utils/Variables.scss";
+@import "../layout/background.module.scss";
 
 .howToPage {
   padding: 0.5rem 2rem;
+  height: 90vh;
   @media screen and (max-width: 760px) {
     padding: 0.5rem 0;
+  }
+  &.dark {
+    @include BG-dark;
   }
   & h3 {
     margin-bottom: 1.4rem;
