copy botton icon added , mobile device detection for not making keystore

--- a/src/styles/sass/pages/Preview.module.scss
+++ b/src/styles/sass/pages/Preview.module.scss
@@ -24,4 +24,10 @@
       padding: 0.4rem 1.8rem;
     }
   }
+  @media screen and (max-width: 768px) {
+    padding: 0.5rem;
+    & div div:nth-of-type(2) span {
+      font-size: 0.7rem;
+    }
+  }
 }
