--- a/src/styles/sass/layout/phraseBox.module.scss
+++ b/src/styles/sass/layout/phraseBox.module.scss
@@ -120,6 +120,10 @@
   &:focus {
     border: 3px solid $successfull;
   }
+  & .icon {
+    margin-right: 0.5rem;
+    color: $primaryWhite;
+  }
   @media screen and (max-width: 760px) {
     width: 100%;
     margin-left: 0rem;
